Add docs and benchmark coverage for release readiness